--- a/src/app/modules/home/components/about-us/about-us.component.html
+++ b/src/app/modules/home/components/about-us/about-us.component.html
@@ -4,7 +4,7 @@
   <div class="card">
     <div class="card-body p-5">
       <div class="fs-4 fw-light text-reset">
-        Author: <a href="https://maximgorbatyuk.github.io" target="_blank">Maxim Gorbatyuk</a>
+        Author: <a href="https://mgorbatyuk.dev" target="_blank">Maxim Gorbatyuk</a>
       </div>
 
       <hr class="mt-3" />
