--- a/src/app/modules/salaries/components/salaries-by-grades-chart/salaries-by-grades-chart.component.html
+++ b/src/app/modules/salaries/components/salaries-by-grades-chart/salaries-by-grades-chart.component.html
@@ -1,3 +1,28 @@
-<div>
-  <canvas id="canvas">{{chartData}}</canvas>
+<div class="">
+  <div class="h5 mb-3">{{ title }}</div>
+  
+  <div class="row">
+    <div class="col-md-3">
+      <div class="mb-3">Кол-во анкет</div>
+
+      <ul *ngIf="salaries" class="list-group list-group-flush">
+        <button
+          *ngFor="let item of salaries"
+          (click)="toggleBarDatasetByProfession(item.profession)"
+          type="button"
+          class="list-group-item list-group-item-action d-flex justify-content-between align-items-cente">
+          <span>{{ item.professionName }}</span>
+          <span class="badge bg-secondary rounded-pill">{{ item.items.length }}</span>
+        </button>
+      </ul>
+    </div>
+
+    <div class="col-md-9" *ngIf="canvasId">
+      <div id="canvas-container">
+        <canvas [attr.id]="canvasId">{{chartDataLocal}}</canvas>
+      </div>
+    </div>
+
+  </div>
+
 </div>
