--- a/src/app/modules/salaries/components/salaries-by-grades-chart/salaries-by-grades-chart.component.html
+++ b/src/app/modules/salaries/components/salaries-by-grades-chart/salaries-by-grades-chart.component.html
@@ -3,16 +3,21 @@
   
   <div class="row">
     <div class="col-md-3">
-      <div class="mb-3">Кол-во анкет</div>
+      <div class="text-muted mb-1 d-flex justify-content-between align-items-center">
+        <span>Кликабельно <i class="bi bi-caret-down-fill"></i></span>
+        <span>Кол-во анкет</span>
+      </div>
 
       <ul *ngIf="salaries" class="list-group list-group-flush">
         <button
           *ngFor="let item of salaries"
-          (click)="toggleBarDatasetByProfession(item.profession)"
+          (click)="toggleBarDatasetByProfession(item)"
           type="button"
-          class="list-group-item list-group-item-action d-flex justify-content-between align-items-cente">
-          <span>{{ item.professionName }}</span>
-          <span class="badge bg-secondary rounded-pill">{{ item.items.length }}</span>
+          class="list-group-item list-group-item-action d-flex justify-content-between align-items-center">
+          <span class="{{ item.turnedOn ? 'fw-bolder' : '' }}">
+            {{ item.professionName }}
+          </span>
+          <span class="badge bg-{{ item.turnedOn ? 'primary' : 'secondary' }} rounded-pill">{{ item.items.length }}</span>
         </button>
       </ul>
     </div>
