--- a/src/app/modules/admin/components/salaries/salaries-admin-page/salaries-admin-page.component.html
+++ b/src/app/modules/admin/components/salaries/salaries-admin-page/salaries-admin-page.component.html
@@ -3,6 +3,46 @@
 <div class="container my-5" *ngIf="salaries; else dataLoading">
   <div class="card">
     <div class="card-body">
+
+      <div class="mb-3 row">
+        <div class="col-md-3">
+          <label for="profession" class="form-label">Company</label>
+            <select class="form-select" id="company" name="company" [(ngModel)]="filter.company">
+              <option selected value="">All</option>
+              <option *ngFor="let item of filter.companies" [value]="item.item">
+                {{ item.label }}
+              </option>
+            </select>
+        </div>
+
+        <div class="col-md-3">
+          <label for="profession" class="form-label">Profession</label>
+            <select class="form-select" id="profession" name="profession" [(ngModel)]="filter.profession">
+              <option selected value="">All</option>
+              <option *ngFor="let item of filter.professions" [value]="item.item">
+                {{ item.label }}
+              </option>
+            </select>
+        </div>
+
+        <div class="col-md-3">
+          <label for="profession" class="form-label">Grade</label>
+            <select class="form-select" id="grade" name="grade" [(ngModel)]="filter.grade">
+              <option selected value="">All</option>
+              <option *ngFor="let item of filter.grades" [value]="item.item">
+                {{ item.label }}
+              </option>
+            </select>
+        </div>
+
+        <div class="col-md-3 d-flex align-items-end">
+          <div>
+            <button type="button" class="btn btn-outline-primary" (click)="loadData()">Apply</button>
+            <button type="button" class="btn btn-outline-dark ms-2" (click)="clearFilter()">Reset</button>
+          </div>
+        </div>
+      </div>
+
       <div class="table-responsive mb-3" *ngIf="salaries.length > 0; else nothingToShow">
         <table class="table table-hover table-sm">
           <thead>
