--- a/src/app/modules/home/components/pricing-block/pricing-block.component.html
+++ b/src/app/modules/home/components/pricing-block/pricing-block.component.html
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-md-4 col-sm-12 mb-4" *ngFor="let card of cards">
-    <div class="card h-100 shadow-lg d-flex align-items-start flex-column">
+    <div class="card h-100 shadow-lg d-flex align-items-center flex-column">
       <div class="card-body">
         <div class="text-center p-3">
           <div class="h4 card-title">{{ card.title }}</div>
@@ -51,5 +51,7 @@
 </ng-template>
 
 <ng-template #disabledButton>
-  <button class="btn btn-outline-primary btn-lg disabled" disabled>Coming soon</button>
+  <button class="btn btn-outline-primary btn-lg disabled" disabled>
+    Coming soon
+  </button>
 </ng-template>
