--- a/src/app/modules/salaries/components/salaries-chart/salaries-chart.component.html
+++ b/src/app/modules/salaries/components/salaries-chart/salaries-chart.component.html
@@ -16,7 +16,7 @@
   <div class="position-relative">
     <div 
       *ngIf="!isAuthenticated"
-      class="position-absolute h-100 w-100 d-flex align-items-md-center align-items-start justify-content-center">
+      class="position-absolute h-100 w-100 d-flex align-items-start justify-content-center pt-5">
       <div class="mt-5 alert alert-info mx-5 z-1">
         <div class="mb-2 h3">{{ isYourSalaryWithinMarketTitle }}</div>
         <div class="mb-5">Зарегистрируйтесь и оставьте данные о своей зарплате, чтобы узнать, сколько зарабатывают другие IT-специалисты в Казахстане.</div>
