Adjusted existing form

--- a/src/app/modules/salaries/components/salaries-chart/salaries-chart.component.html
+++ b/src/app/modules/salaries/components/salaries-chart/salaries-chart.component.html
@@ -123,11 +123,12 @@
     </div>
   </div>
 
-  <app-add-salary-modal
+  <app-add-or-edit-salary-modal
     *ngIf="openAddSalaryModal"
+    [salarytoBeEdited]="null"
     (closed)="closeAddSalaryAction()"
     (salaryAdded)="onSalaryAdded($event)"
-  ></app-add-salary-modal>
+  ></app-add-or-edit-salary-modal>
   
   <ng-template #dataLoading>
     <div class="container mt-5">
