--- a/src/app/modules/salaries/components/salaries-chart/salary-block-remote-value/salary-block-remote-value.component.html
+++ b/src/app/modules/salaries/components/salaries-chart/salary-block-remote-value/salary-block-remote-value.component.html
@@ -1,5 +1,5 @@
 <div>
-  <div class="text-muted">{{ title }}</div>
+  <div *ngIf="title" class="text-muted">{{ title }}</div>
   <div class="text-muted">
     <span class="h3 me-1">{{ value }}</span>
     <span class="h4">тг.</span>
