--- a/src/app/modules/salaries/components/add-salary/add-salary.component.html
+++ b/src/app/modules/salaries/components/add-salary/add-salary.component.html
@@ -2,18 +2,18 @@
   <div class="modal-dialog custom-alert modal-lg" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <span class="h3 modal-title">{{ modalTitle }}</span>
+        <span class="h3 modal-title">Добавьте свою зарплату</span>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" (click)="close()"></button>
       </div>
 
       <div class="modal-body">
         <div class="p-1">
 
-          <div *ngIf="!salarytoBeEdited" class="my-1 mb-3">
+          <div class="my-1 mb-3">
             Для того, чтобы просматривать график зарплат, вам нужно сначала внести свою. График открывается, только если среди данных есть ваша зарплата за последний год.
           </div>
 
-          <hr *ngIf="!salarytoBeEdited" class="mb-3" />
+          <hr class="mb-3" />
 
           <form
             *ngIf="addSalaryForm"
@@ -22,7 +22,7 @@
             <div class="mb-3">
               <label>Зарплата в тенге <strong>в месяц</strong>. Если вы получаете в иной валюте, переведите в тенге.</label>
               <input formControlName="value" type="text" class="form-control form-control-lg" />
-              <app-field-error [field]="addSalaryForm.get('value')" [max]="10000000" [min]="42500"></app-field-error>
+              <app-field-error [field]="addSalaryForm.get('value')" [max]="10000000" [min]="75000"></app-field-error>
             </div>
 
           <div class="mb-3">
@@ -81,7 +81,7 @@
           </div>
   
           <div class="mb-3 pt-2">
-            <button class="btn btn-primary btn-lg w-100" type="submit">{{ saveButtonTitle }}</button>
+            <button class="btn btn-primary btn-lg w-100" type="submit">Добавить</button>
           </div>
         </form>
 
