--- a/src/app/modules/home/components/privacy-policy-page/privacy-policy-page.component.html
+++ b/src/app/modules/home/components/privacy-policy-page/privacy-policy-page.component.html
@@ -589,9 +589,7 @@
           <div class="h2">Contact Us</div>
           <p>Don't hesitate to contact us if you have any questions.</p>
           <ul>
-            <li>Via Email: info&#64;petrel.ai</li>
-            <li>Via Phone Number: +77273132050</li>
-            <li>Via this Address: Kazakhstan, Almaty, Baizakov st, 280. SmartPoint, office 214</li>
+            <li>Via Email: ake111aa&#64;ya.ru</li>
           </ul>
           <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
         </div>
