--- a/src/app/modules/admin/components/salaries/salaries-admin-page/salaries-admin-page.component.html
+++ b/src/app/modules/admin/components/salaries/salaries-admin-page/salaries-admin-page.component.html
@@ -7,6 +7,7 @@
       <app-salaries-admin-paginated-table
         [source]="source"
         [salaries]="salaries"
+        [filter]="filter"
         (loadDataRequested)="loadData($event)"
         deleteRequested="deleteSalary($event)"
         ></app-salaries-admin-paginated-table>
