--- a/src/app/modules/admin/components/salaries/salaries-admin-page/salaries-admin-page.component.html
+++ b/src/app/modules/admin/components/salaries/salaries-admin-page/salaries-admin-page.component.html
@@ -8,8 +8,10 @@
         [source]="source"
         [salaries]="salaries"
         [filter]="filter"
+        [showApproveButton]="true"
+        (approveRequested)="approveSalary($event)"
         (loadDataRequested)="loadData($event)"
-        deleteRequested="deleteSalary($event)"
+        (deleteRequested)="deleteSalary($event)"
         ></app-salaries-admin-paginated-table>
 
     </div>
