--- a/src/app/modules/admin/components/salaries/salaries-not-in-stat-admin-page/salaries-not-in-stat-admin-page.component.html
+++ b/src/app/modules/admin/components/salaries/salaries-not-in-stat-admin-page/salaries-not-in-stat-admin-page.component.html
@@ -1,4 +1,4 @@
-<app-page-header>Salaries not in stats</app-page-header>
+<app-page-header>Salaries to be approved</app-page-header>
 
 <div class="container my-5" *ngIf="salaries; else dataLoading">
   <div class="card">
