--- a/src/app/shared/components/pagination-buttons/pagination-buttons.component.html
+++ b/src/app/shared/components/pagination-buttons/pagination-buttons.component.html
@@ -15,7 +15,12 @@
       </li>
 
       <li *ngFor="let page of pages" class="page-item {{ activePageStyle(page) }}">
-        <button type="button" class="page-link" (click)="pageClicked(page)">{{ page }}</button>
+        <button
+          *ngIf="page != null"
+          type="button"
+          class="page-link"
+          (click)="pageClicked(page)">{{ page }}</button>
+        <div class="page-link" *ngIf="page == null">...</div>
       </li>
 
       <li class="page-item {{ disableNextButton ? 'disabled' : '' }}">
